# subscription-manager

./: .gitignore  Anchor.toml  authorise.ts  crank.ts  create_plan.ts  package-lock.json  subscribe_plan.ts  temp.json
backend/: index.js
programs/solana-subscription-manager/: Cargo.toml
programs/solana-subscription-manager/src/: lib.rs
~C:/Users/user/.config/solana/: id2.json
