[package]
name = "solana-subscription-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_subscription_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1" 

[patch.crates-io]
solana-program-entrypoint = { git = "https://github.com/solana-labs/solana-program-library", package = "solana-program-entrypoint" }
proc-macro2 = "=1.0.78"